--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,6 @@
+
 body{
-    font-family: 'Times New Roman', Times, sans-serif; size: 20px;
+    font-family: 'Times New Roman', Times, sans-serif;
     color: black
     
 }
@@ -8,13 +9,21 @@ body{
     margin: auto;
     background: #DCDCDC;
     padding: 10px; 20px;
+    
 }
 h1{
     text-align: center;
     background: red;
 
 }
-label, input[type=submit]{
+label, input,[type=submit]{
     display: block;
-    background: red;
+    cursor: pointer;
+}
+p{
+    font-family: 'Times New Roman', Times, sans-serif;
+    color: black;
+    font-size: 18px;
+    margin: 0px;
+  
 }
